--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -43,11 +43,15 @@
                         <table class='table is-striped is-fullwidth'>
                             <tr>
                                 <td><b>Chinatown - A New View</b></td>
-                                <td><a href="{{ url_for('bookings') }}">Confirm Tour</a></td>
+                                <td><a href="{{ url_for('bookings') }}">Make Payment</a></td>
                             </tr>
                             <tr>
                                 <td><b>Best of Kampong Glam</b></td>
-                                <td><a href="{{ url_for('bookings') }}">Review Custom Itinerary</a></td>
+                                <td><a href="{{ url_for('bookings') }}">Submit Requirements</a></td>
+                                <td><a href="{{ url_for('bookings') }}">Review Custom Itinerary & Charges</a></td>
+                                <td><a href="{{ url_for('bookings') }}">Make Payment</a></td>
+                                <td><a href="{{ url_for('bookings') }}">Complete Tour</a></td>
+                                <td><a href="{{ url_for('bookings') }}">Leave Feedback</a></td>
                             </tr>
                         </table>
                     </div>
