--- a/templates/tourGuides/allBusinesses.html
+++ b/templates/tourGuides/allBusinesses.html
@@ -20,19 +20,54 @@
         </div>
     </section>
 
-    <section class='section'>
-        <div class='container'>
-            <!--START: Dropdown-->
-            <div class="control">
-                <div class="select">
-                    <select>
-                        <option>All Jobs</option>
-                        <option>Current Jobs</option>
-                        <option>Uninitiated</option>
-                        <option>Archived</option>
-                    </select>
+    <section class="section">
+        <div class="container">
+            <div class="box">
+                <div class="columns">
+                    <div class="column is-half">
+                        <p class="subtitle">Upcoming Tours</p>
+                        <table class='table is-striped is-fullwidth'>
+                            <tr>
+                                <td>07 Jan</td>
+                                <td><a href="{{ url_for('business') }}">Bishan Nightlife</a></td>
+                            </tr>
+                            <tr>
+                                <td>07 Jan</td>
+                                <td><a href="{{ url_for('business') }}">Bishan Nightlife</a></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="column is-half">
+                        <p class="subtitle">Required Action</p>
+                        <table class='table is-striped is-fullwidth'>
+                            <tr>
+                                <td><b>Chinatown - A New View</b></td>
+                                <td><a href="{{ url_for('business') }}">Confirm Tour</a></td>
+                            </tr>
+                            <tr>
+                                <td><b>Best of Kampong Glam</b></td>
+                                <td><a href="{{ url_for('business') }}">Review Custom Itinerary</a></td>
+                                <td><a href="{{ url_for('business') }}">Leave Feedback</a></td>
+                            </tr>
+                        </table>
+                    </div>
+                    </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!--START: Dropdown-->
+    <section class='section'>
+        <div class='container has-text-centered'>
+                    <div class="control">
+                        <div class="select">
+                            <select>
+                                <option>Ongoing Jobs</option>
+                                <option>Completed</option>
+                            </select>
+                        </div>
+                    </div>
         </div>
     </section>
     <!--END: Dropdown-->
@@ -40,100 +75,98 @@
         <!--START: Card -->
         <div class='container mt-5'>
             <div class='box p-5'>
+                <a href="{{ url_for('business') }}">
                 <div class="columns is-vcentered">
                     <div class="column">
                         <div class="ml-4">
-                            <span class="tag has-text-gray-light mb-4">Unintiated</span>
+                            <span class="tag is-info is-light mb-4">Planning</span>
                             <div class="mb-2 listing-author">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is ordering:</div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
                             </div>
                             <h1 class='title'>Bishan Nightlife</h1>
                             <p class="subtitle">Explore the night life of Bishan</p>
-                            <br>
-                            <a href="{{ url_for('business') }}" class="has-text-link mt-2">
-                                View Job details</a>
                         </div>
                     </div>
                     <div class="column is-two-fifths">
                         <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
         <!--END: Card-->
         <!--START: Card -->
         <div class='container mt-5'>
             <div class='box p-5'>
+                <a href="{{ url_for('business') }}">
                 <div class="columns is-vcentered">
                     <div class="column">
                         <div class="ml-4">
-                            <span class="tag is-info is-light mb-4">Ordered</span>
+                            <span class="tag is-success is-light mb-4">Confirmed</span>
                             <div class="mb-2 listing-author">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is ordering:</div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
                             </div>
                             <h1 class='title'>Bishan Nightlife</h1>
                             <p class="subtitle">Explore the night life of Bishan</p>
-                            <br>
-                            <a href="{{ url_for('business') }}" class="has-text-link mt-2">
-                                View Job details</a>
                         </div>
                     </div>
                     <div class="column is-two-fifths">
                         <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
         <!--END: Card-->
         <!--START: Card -->
         <div class='container mt-5'>
             <div class='box p-5'>
-                <div class="columns is-vcentered">
-                    <div class="column">
-                        <div class="ml-4">
-                            <span class="tag is-success is-light mb-4">Paid</span>
-                            <div class="mb-2 listing-author">
-                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is ordering:</div>
-                            </div>
-                            <h1 class='title'>Bishan Nightlife</h1>
-                            <p class="subtitle">Explore the night life of Bishan</p>
-                            <br>
-                            <a href="{{ url_for('business') }}" class="has-text-link mt-2">
-                                View Job details</a>
-                        </div>
-                    </div>
-                    <div class="column is-two-fifths">
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--END: Card-->
-        <!--START: Card -->
-        <div class='container mt-5'>
-            <div class='box p-5'>
+                <a href="{{ url_for('business') }}">
                 <div class="columns is-vcentered">
                     <div class="column">
                         <div class="ml-4">
                             <span class="tag is-warning is-light mb-4">Completed</span>
                             <div class="mb-2 listing-author">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HidethePain</b> is ordering:</div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
                             </div>
                             <h1 class='title'>Bishan Nightlife</h1>
                             <p class="subtitle">Explore the night life of Bishan</p>
-                            <br>
-                            <a href="{{ url_for('business') }}" class="has-text-link mt-2">
-                                View Job details</a>
                         </div>
                     </div>
                     <div class="column is-two-fifths">
                         <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
                     </div>
                 </div>
+                </a>
+            </div>
+        </div>
+        <!--END: Card-->
+        <!--START: Card -->
+        <div class='container mt-5'>
+            <div class='box p-5'>
+                <a href="{{ url_for('business') }}">
+                <div class="columns is-vcentered">
+                    <div class="column">
+                        <div class="ml-4">
+                            <span class="tag is-info is-light mb-4">Planning</span>
+                            <span class="tag is-success is-light mb-4">Confirmed</span>
+                            <span class="tag is-warning is-light mb-4">Completed</span>
+                            <div class="mb-2 listing-author">
+                                <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                <div class="ml-2"><b>HidethePain</b> is buying:</div>
+                            </div>
+                            <h1 class='title'>Bishan Nightlife</h1>
+                            <p class="subtitle">Explore the night life of Bishan</p>
+                        </div>
+                    </div>
+                    <div class="column is-two-fifths">
+                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                    </div>
+                </div>
+                </a>
             </div>
         </div>
         <!--END: Card-->
