Added user chat to navbar (oops)

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,10 @@
                            href="{{ url_for('favourites') }}">
                             <i class="fas fa-heart"></i>
                         </a>
+                        <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Inbox"
+                            href="{{ url_for('chat') }}">
+                            <i class="fas fa-comment-alt"></i>
+                        </a>
                         <div class="navbar-item has-dropdown is-hoverable">
                             <a class="navbar-item">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
