--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -137,7 +137,7 @@
                                        href={{ url_for('favourites') }}><i
                                             class="fas fa-heart"></i>&ensp;Add
                                         to wishlist</a>
-                                    <a class="button is-white has-text-primary" href={{ url_for('all_bookings') }}><i
+                                    <a class="button is-white has-text-primary" href="{{ url_for('book_now')}}"><i
                                             class="fas fa-arrow-right"></i>&ensp;Book
                                         now</a>
                                 </div>
