checkout placeholder added

--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -10,9 +10,12 @@
 
 {% block content %}
 <section class="section">
-    <div class="container">
-        <div class="box">
-            Book Now Form
+    <div class="columns is-centered">
+        <div class="column is-two-fifths">
+            <div class="container box">
+                hello
+                <a href="{{ url_for('checkout')}}">checkout</a>
+            </div>
         </div>
     </div>
 </section>
