--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -3,6 +3,17 @@
 {% block scripts %}
     <link rel="stylesheet" href="/css/shop.css">
     <link rel="stylesheet" href="/css/index.css">
+    $("#currentImg").change(function(){
+        var img = $(this).val();
+        $.ajax({
+            medthod: 'POST',
+            url:'/apis/upImg',
+            data: JSON.stringify({currentImg: img}),
+            success: function(data){
+                $("#currentImg").attr('src', 'data:image/png;base64, ' + data);
+            }
+        });
+    });
 {% endblock %}
 
 {% block content %}
@@ -78,7 +89,7 @@
                                         {% endfor %}
                                     </ul>
                                 </label>
-                                <div>
+                                <div id="currentImg">
                                     <img src="data:image/png;base64, {{ imgBase64 }}"/>
                                 </div>
                             </div>
