--- a/templates/customer/marketplace-search.html
+++ b/templates/customer/marketplace-search.html
@@ -4,68 +4,6 @@
     <link rel="stylesheet" href="/css/shop.css">
     <link rel="stylesheet" href="/css/discover.css">
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script>
-
-        function generateListing(listing) {
-            var listingTemplate =
-            `
-                    <a href='/discover/${listing['_id']}'>
-                        <div class='p-5 vertical'>
-                            <div class="box listing-img"
-                                style="background-image: url('data:image/jpeg;base64,${listing['tour_img']}') ;"></div>
-                                <div class="ml-4">
-                                    <div class="mb-2 listing-author">
-                                        <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                        <div class="ml-2"><b>HidethePain</b> is offering:</div>
-                                    </div>
-                                    <h1 class='title is-4'>${listing['tour_name']}</h1>
-                                    <p class="subtitle is-6">${listing['tour_brief']}</p>
-                                    <p class="has-text-weight-light is-size-3 has-text-dark"><small
-                                            class="is-size-5">From</small>
-                                            $${listing['tour_price']}
-                                    </p>
-                                    <br>
-                                </div>
-                                <div class="buttons">
-                                    <a class="button is-white" style="color:rgb(73, 27, 35)"
-                                    href={{ url_for('favourites') }}><i
-                                            class="fas fa-heart"></i>&ensp;Add
-                                        to wishlist</a>
-                                    <a class="button is-white has-text-primary" href="{{ url_for('book_now')}}"><i
-                                            class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-            `
-            return listingTemplate
-        }
-
-        function liveSearch(value) {
-            value = value.trim(); // remove any spaces around the text
-            if (value != "") { // don't make requests with an empty string
-                $.ajax({
-                    url: "/search",
-                    data: {searchListing: value},
-                    dataType: "json",
-                    success: (data) => {
-                        var res = "";
-                        for (i in data.results) {
-                            console.log(data.results[i]['_id'].replace(/"/g, ''))
-                            data.results[i]['_id'] = data.results[i]['_id'].replace(/"/g, '')
-                            listing = generateListing(data.results[i])
-                            res += "<div class='column is-one-third'>" + listing + "</div>";
-                        }
-                        $("#displayListings").html(res);
-                    }
-
-                });
-            } else {
-                $("#displayListings").html(""); // set the results empty in case of empty string
-            }
-        }
-
-    </script>
 {% endblock %}
 
 {% block content %}
@@ -142,15 +80,6 @@
 
 
     <section class="section">
-        <div class="container">
-
-            <div class="section">
-                <div class="has-text-info" id="results"></div>
-            </div>
-
-            <div class="columns is-multiline" id='displayListings'>
-            </div>
-
-        </div>
+        <h1>Nothing found!</h1>
     </section>
 {% endblock %}
